fixed landing page on small height screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -143,6 +143,40 @@ h2 a:hover {
   font-size: 1.2em;
 }
 
+@media screen and (max-height: 640px) {
+  .landing-page {
+    transform: rotate(0deg);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  h1 {
+    text-align: start;
+  }
+
+  h2 {
+    grid-column: 5;
+    grid-row: 1/4;
+    justify-self: start;
+  }
+
+  .landing-subtitle {
+    grid-column: 4;
+    grid-row: 1;
+    align-self: start;
+  }
+  .landing-nav {
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+
+  .landing-intro {
+    grid-column: 3/5;
+    grid-row: 2;
+    align-self: end;
+  }
+}
+
 @media screen and (max-height: 780px) {
   main {
     padding-top: 0;
